--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
@@ -3,12 +3,14 @@
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_password_match">Enter password again</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="action_forgot_password">Forgot Password?</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_username">This username is invalid</string>
     <string name="error_invalid_password">This password is invalid</string>
+    <string name="error_password_mismatch">The passwords don\'t match</string>
     <string name="error_incorrect_sign_in">The username or password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
