--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
@@ -4,10 +4,12 @@
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="prompt_password_match">Enter password again</string>
+    <string name="prompt_security_answer">Enter security question answer</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="action_forgot_password">Forgot Password?</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="action_recover_account">Recover Account</string>
     <string name="error_invalid_username">This username is invalid</string>
     <string name="error_invalid_password">This password is invalid</string>
     <string name="error_password_mismatch">The passwords don\'t match</string>
