--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="prompt_password_match">Enter password again</string>
+    <string name="prompt_security_question">Enter security question</string>
     <string name="prompt_security_answer">Enter security question answer</string>
+    <string name="prompt_security_answer_second">Enter security question answer again</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_register">Register</string>
     <string name="action_forgot_password">Forgot Password?</string>
@@ -18,6 +20,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="access_url">prometheus.student.iastate.edu:8080/</string>
+    <string name="access_url">http://prometheus.student.iastate.edu:8080/</string>
     <string name="application_title_text">CATCH THE CACHE</string>
 </resources>
