Added an activity for viewing the cache list and starting implementing a recycleviewer
Added an activity for viewing the cache list and starting implementing a recycleviewer to view the caches and what not.

--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     </string>
     <string name="access_url">http://prometheus.student.iastate.edu:8080/</string>
     <string name="application_title_text">CATCH THE CACHE</string>
+    <string name="title_activity_cache_list">cacheListActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
