--- a/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
+++ b/Frontend/CatchTheCacheAndroid/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="access_url">http://cs309-jr-2.misc.iastate.edu:8080/</string>
     <!--<string name="access_socket">ws://prometheus.student.iastate.edu:8080/</string>-->
     <string name="access_socket">ws://cs309-jr-2.misc.iastate.edu:8080/</string>
+    <string name="access_socket_annie">ws://192.168.1.115:8080/chats/m/1/websocket</string>
     <string name="application_title_text">CATCH THE CACHE</string>
     <string name="title_activity_cache_list">cacheListActivity</string>
     <string name="action_settings">Settings</string>
